--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "json-server": "^0.17.4",
     "vite": "^4.0.4",
     "vue": "^2.7.14",
+    "vue-debounce": "^4.0.0",
     "vue-router": "^3.6.5",
     "vue-template-compiler": "^2.7.14",
     "vuex": "^3.6.2"
